Complete blog series: fix errors + add 20 new articles
Fixes in existing posts:
- Removed duplicate content sections in Part 1 posts
- Fixed typos (4006->4096, written written, overlook->bypass)
- Fixed grammar and capitalization issues

New articles added:
- Microarchitecture: Rowhammer Attack (Part 5)
- Cryptography: Asymmetric, Hashing, Digital Signatures (Parts 3-5)
- Pentesting: Passive Recon, Active Recon, Exploitation, Post-Exploitation (Parts 2-5)
- Network Security: Subnetting, Firewalls, IDS/IPS, VPN (Parts 2-5)
- System Security: Buffer Overflows, Privilege Escalation, Rootkits, Secure Boot (Parts 2-5)
- AI Security: Prompt Injection, Data Poisoning, Model Inversion, Guardrails (Parts 2-5)

--- a/_posts/2026-01-24-aisec-01-intro.md
+++ b/_posts/2026-01-24-aisec-01-intro.md
@@ -79,9 +79,9 @@ This series is not just about breaking AI; it is about securing it. Security can
 
 ### Defense Strategies we will explore:
 1.  **Input Filtering**: Detecting malicious patterns before they reach the model.
-2.  **Output Validation**: rigorous sanitization of what the model produces.
+2.  **Output Validation**: Rigorous sanitization of what the model produces.
 3.  **Sandboxing**: Ensuring AI agents operate with least privilege.
-4.  **Human in the Loop**: Critical decisions should arguably never be fully automated without oversight.
+4.  **Human in the Loop**: Critical decisions should never be fully automated without human oversight.
 
 ### The Road Ahead in 2026
 As AI agents gain the ability to "act" (call APIs, browse the web), the stakes get higher. An injection isn't just a wrong answer anymore; it's a realized financial transaction or a deleted repository.
