--- a/_posts/2026-01-24-netsec-01-osi.md
+++ b/_posts/2026-01-24-netsec-01-osi.md
@@ -70,37 +70,4 @@ When you open Wireshark, you aren't just seeing "data"; you are seeing the raw t
 ### What's Next?
 In this series, we will move from theory to practice. We will capture live traffic, analyze malicious packets, and learn how to configure firewalls to block them.
 
-**Next Part:** We will install Wireshark and dissect our first HTTP and DNS packets.
-
-To secure a network, you must understand the flow of data at a microscopic level.
-
-## The OSI Model
-
-The Open Systems Interconnection (OSI) model is the map of the internet.
-
-1.  **Physical**: Cables, WiFi.
-2.  **Data Link**: MAC Addresses, Switching.
-3.  **Network**: IP Addresses, Routing.
-4.  **Transport**: TCP/UDP, Ports.
-5.  **Session**
-6.  **Presentation**
-7.  **Application**: HTTP, DNS, SSH.
-
-## The 3-Way Handshake
-
-Every reliable connection starts with a polite conversation using flags:
-
-1.  **SYN** (Synchronize): "Hi, I'd like to talk."
-2.  **SYN-ACK** (Synchronize-Acknowledge): "Sure, I'm listening."
-3.  **ACK** (Acknowledge): "Great, let's start."
-
-> [!WARNING]
-> If a server receives thousands of SYN packets but never gets an ACK, it can crash. This is a **SYN Flood** attack.
-
-## Analyzing Traffic
-
-We will be using **Wireshark** extensively in this series to visualize these concepts.
-
-### Up Next
-
-In Part 2: **Subnetting** and why it's the most hated yet important topic in networking.
+**Next Part:** We will install Wireshark and dissect our first HTTP and DNS packets, then move on to the dreaded world of **Subnetting**.
